address-select fix / z-index global

--- a/resources/scss/callisto4/views/PageDesign/_header.scss
+++ b/resources/scss/callisto4/views/PageDesign/_header.scss
@@ -13,7 +13,7 @@
 	    left: 50%;
 	    transform: translateX(-50%);
 	    background: $gray-lightest;
-	    z-index: 2000;
+	    z-index: 1050;
 	}
 	#page-body {
 		padding-top: 119px;
@@ -51,7 +51,7 @@
 
 			// sets the height of the top-bar
 			a{
-				padding: 0.75rem .8rem;
+				padding: 0.5rem .8rem;
 				display: inline-block;
 				color: $gray-lighter;
 				
@@ -84,6 +84,9 @@
 						color: $brand-primary;
 						&:first-child {
 							border-top:0;
+						}
+						&:hover {
+							color: $white;
 						}
 					}
 				}
