--- a/resources/scss/callisto4/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/callisto4/views/Templates/CategoryListItem/_category-list-item.scss
@@ -193,7 +193,7 @@
         }
 
         &:hover{
-            z-index: 3000;
+            z-index: 1000;
 
             .thumb-background{
                 transform: scaleX(1.33) scaleY(1.15);
